# at89c2051

./: .gitignore  CMakeLists.txt  Makefile.me  README.md
programmer/: CMakeLists.txt  README.md
programmer/test/blink/: Makefile  README.md  blink.c
programmer/tools/: CMakeLists.txt
programmer/tools/hex2bin/: CMakeLists.txt  README.md
programmer/tools/hex2bin/src/: common.h
programmer/x051prg/: CMakeLists.txt
programmer/x051prg/include/: programmer.h
programmer/x051prg/lib/gpio/include/gpio/: gpio2.h
programmer/x051prg/lib/i2c/include/i2c/: i2c.h
programmer/x051prg/src/: programmer.cpp  x051prg.cpp
x051apps/: CMakeLists.txt  Makefile.me  README.md  sdcc-toolchain.cmake
x051apps/common/: common.h  delay.c  i2c.c  lcd1602.c  lcd1602.h  mcp23017.c
x051apps/hello_clock/: Makefile.me
x051apps/hello_lcd1602/: Makefile.me  hello_lcd1602.c
x051apps/hello_mcp23017/: hello_mcp23017.c
x051apps/hello_switch/: Makefile.me
x051apps/lcd1602_i2c/: Makefile.me  lcd1602_i2c.c
x051apps/post_install/: CMakeLists.txt
x051apps/src/common/: common.h  delay.c  lcd1602_direct.c  lcd1602_i2c.c  mcp23017.c
x051apps/src/hello_clock/: CMakeLists.txt  Makefile.me  hello_clock.c
x051apps/src/hello_lcd1602/: CMakeLists.txt  Makefile.me
x051apps/src/hello_lcd1602_i2c/: CMakeLists.txt  Makefile.me
x051apps/src/hello_mcp23017/: CMakeLists.txt  Makefile.me  hello_mcp23017.c
x051apps/src/hello_switch/: CMakeLists.txt  hello_switch.c
x051apps/src/hello_timer/: CMakeLists.txt  Makefile.me  hello_timer.c
